<resources>
    <string name="app_name">Steingold_Elyse_Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="street">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="bio">Bio</string>
    <string name="interests">Interests</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="nextPage">Swipe to Next Page</string>
    <string name="save">Save</string>
</resources>